--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -1,11 +1,17 @@
 
 /*
-CSS to be applied ONLY on the snapshot page
+CSS to be applied ONLY on the ring page
 */
 
 @import reusable
 
 #ring-page
+
+  h4
+    margin-bottom : 20px
+
+  strong
+    headline-bold()
 
   #current-ring
     max-width   : 850px
@@ -15,6 +21,105 @@ CSS to be applied ONLY on the snapshot page
     & > span.gui-text-flat
       line-height : 1.5
       display     : block
+
+  .clear
+    clear : both
+
+  #legend
+    dimensions(33%, auto)
+    border-right : 1px solid lightWhite;
+    float  : left
+    margin : 25px 0 25px 0
+
+    span
+      headline-font()
+      display   : inline-block
+      width     : 80%
+      margin    : 3px 0 15px 0
+      font-size : 15px
+      line-height    : 1.3
+      vertical-align : top
+
+      &.footnote
+        width         : auto
+        border-top    : 1px solid lightWhite
+        padding       : 20px 20px 0 0
+        margin-bottom : 10px
+
+    .partition
+      display : inline-block
+      float   : none
+      margin-right   : 8px
+      vertical-align : top
+
+  #partition-container
+    dimensions(63%, auto)
+    margin : 25px 0 25px 3%
+    float  : left
+
+  .partition
+    css-transition(background-color .3s ease, border-color .3s ease)
+    dimensions(14px, 14px)
+    corners(2px)
+    background : #626262
+    display    : block
+    float      : left
+    margin     : 3px
+    border     : 2px solid rgba(0, 0, 0, .78)
+
+    &.gray
+      radialGradient(#626262, #555555)
+
+    &.orange
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(255, 183, 101, 1), rgba(255, 183, 101, 0))
+      vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .45))
+      border-color     : #36280e
+      background-color : #feac4f
+
+      &.pulse
+        vendor('animation', pulseOrange 1s infinite)
+
+    &.red
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(246, 93, 93, 1), rgba(246, 93, 93, 0))
+      vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
+      border-color     : #2b0c0c
+      background-color : #ea5050
+
+      &.pulse
+        vendor('animation', pulseRed 1s infinite)
+
+    &.blue
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(59, 170, 255, 1), rgba(59, 170, 255, 0))
+      vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .45))
+      border-color     : #071a20
+      background-color : #299ce5
+
+      &.pulse
+        vendor('animation', pulseBlue 1s infinite)
+
+    &.green
+      css-transition(background-color .3s ease, border-color .3s ease)
+      radialGradient(rgba(132, 255, 126, 1), rgba(132, 255, 126, 0))
+      vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
+      border-color     : #071a03
+      background-color : #6ce157
+
+      &.pulse
+        vendor('animation', pulseGreen 1s infinite)
+
+  @media screen and (max-width: 620px)
+    #legend, #partition-container
+      float        : none
+      width        : auto
+      border-right : none
+      margin-left  : 0
+
+    h4.partition-header
+      hSize(26px, 0, 12px)
+      font-weight : normal
 
 /*
  * Keyframes for green pulsing effect.
@@ -303,69 +408,6 @@ CSS to be applied ONLY on the snapshot page
     background-color: #555555
   }
 }
-
-#ring-page
-
-  .clear
-    clear : both
-
-  #partition-container
-    margin    : 25px auto
-    max-width : 696px
-
-  .partition
-    css-transition(background-color .3s ease, border-color .3s ease)
-    dimensions(14px, 14px)
-    corners(2px)
-    background : #626262
-    display    : block
-    float      : left
-    margin     : 3px
-    border     : 2px solid rgba(0, 0, 0, .78)
-
-    &.gray
-      radialGradient(#626262, #555555)
-
-    &.orange
-      css-transition(background-color .3s ease, border-color .3s ease)
-      radialGradient(rgba(255, 183, 101, 1), rgba(255, 183, 101, 0))
-      vendor('box-shadow', 0 0 8px rgba(255, 183, 101, .45))
-      border-color     : #36280e
-      background-color : #feac4f
-
-      &.pulse
-        vendor('animation', pulseOrange 1s infinite)
-
-    &.red
-      css-transition(background-color .3s ease, border-color .3s ease)
-      radialGradient(rgba(246, 93, 93, 1), rgba(246, 93, 93, 0))
-      vendor('box-shadow', 0 0 8px rgba(246, 93, 93, .45))
-      border-color     : #2b0c0c
-      background-color : #ea5050
-
-      &.pulse
-        vendor('animation', pulseRed 1s infinite)
-
-    &.blue
-      css-transition(background-color .3s ease, border-color .3s ease)
-      radialGradient(rgba(59, 170, 255, 1), rgba(59, 170, 255, 0))
-      vendor('box-shadow', 0 0 8px rgba(59, 170, 255, .45))
-      border-color     : #071a20
-      background-color : #299ce5
-
-      &.pulse
-        vendor('animation', pulseBlue 1s infinite)
-
-    &.green
-      css-transition(background-color .3s ease, border-color .3s ease)
-      radialGradient(rgba(132, 255, 126, 1), rgba(132, 255, 126, 0))
-      vendor('box-shadow', 0 0 8px rgba(132, 255, 126, .45))
-      border-color     : #071a03
-      background-color : #6ce157
-
-      &.pulse
-        vendor('animation', pulseGreen 1s infinite)
-
 
 /*
   #no-details
