--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -13,12 +13,32 @@
 
   <div id="current-ring">
     <h2 class="gui-headline">Current Ring</h2>
-    <span class="gui-text-flat italic">Overview of the hash-space and
-      availability of data stored in the cluster.</span><br/>
+    <span class="gui-text-flat italic">
+      Overview of the hash-space and availability of data stored in the cluster.
+      Any partitions with unique issues are represented by glowing squares, color coded by issue.
+    </span><br/>
+
+    <section id="legend">
+      <h4 class="gui-headline-bold">Legend</h4>
+      <div class="partition red"></div>
+      <span class="legend-label gui-text">All sorts of bad stuff is going down.</span><br/>
+      <div class="partition orange"></div>
+      <span class="legend-label gui-text">The partition is at risk for something terrible happening.<strong>*</strong></span><br/>
+      <div class="partition blue"></div>
+      <span class="legend-label gui-text">Some less bad stuff is happening in this case.</span><br/>
+
+      <span class="footnote gui-text">
+        <strong>*</strong> If the square is pulsing, it means that there is a time lord nearby.
+      </span>
+    </section>
+
     <section id="partition-container">
+      <h4 class="gui-headline-bold partition-header">Partitions With Issues</h4>
       {{collection RiakControl.PartitionsView contentBinding="content"}}
       <div class="clear"></div>
     </section>
+
+    <div class="clear"></div>
   </div>
   <div class="clear"></div>
 </div>
