Update labels; remove pulsing.

--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -21,16 +21,14 @@
     <section id="legend">
       <h4 class="gui-headline-bold">Legend</h4>
       <div class="partition red"></div>
-      <span class="legend-label gui-text">All available replicas are fallbacks.</span><br/>
+      <span class="legend-label gui-text">Only fallbacks available.</span><br/>
       <div class="partition orange"></div>
-      <span class="legend-label gui-text">Majority of available replicas are fallbacks.</span><br/>
+      <span class="legend-label gui-text">Majority fallbacks available.</span><br/>
       <div class="partition blue"></div>
-      <span class="legend-label gui-text">Not all replicas are on distinct nodes.</span><br/>
-
-      <span class="footnote gui-text">
-        <strong>*</strong> If the square is pulsing, it means this partition is at risk for that state.
-      </span>
-      </section>
+      <span class="legend-label gui-text">Degenerate preflist.</span><br/>
+      <div class="partition green"></div>
+      <span class="legend-label gui-text">Available.</span><br/>
+    </section>
 
 
     <section id="partition-container">
