First pass pie chart.

--- a/priv/admin/js/templates/degenerate_preflist_chart.hbs
+++ b/priv/admin/js/templates/degenerate_preflist_chart.hbs
@@ -1,2 +1,2 @@
 <div id="degenerate"></div>
-<span>Some information goes here.</span>
+<span class="gui-text">Some information goes here.</span><br/>
