--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -14,9 +14,17 @@
   <div id="current-ring">
     <h2 class="gui-headline">Availability</h2>
 
+    <!-- first chart -->
     {{view RiakControl.DegeneratePreflistChart}}
+    <div class="chart-spacer"></div>
 
-    <h2 class="gui-headline">Partitions</h2>
+    <!-- second chart goes here -->
+    <div class="chart-spacer"></div>
+
+    <!-- third chart goes here -->
+
+    <div class="clear"></div>
+    <h2 class="gui-headline partition-section">Partitions</h2>
 
     <section id="legend">
       <h4 class="gui-headline-bold">Legend</h4>
