--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -1964,11 +1964,30 @@ input.gui-point-button-right:active {
 #ring-page .clear {
   clear: both;
 }
+#ring-page .chart-spacer {
+  float: left;
+  width: 25px;
+  height: 1px;
+}
 #ring-page .chart {
-  display: inline-block;
-  margin-left: 50px;
-  margin-right: 50px;
+  float: left;
   margin-bottom: 30px;
+  margin-top: 15px;
+  width: 266px;
+  vertical-align: top;
+}
+#ring-page .chart span {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  display: inline-block;
+  font-size: 15px;
+  padding-top: 12px;
+  line-height: 1.3;
+  vertical-align: top;
+}
+#ring-page .partition-section {
+  border-top: 1px solid rgba(255,255,255,0.18);
+  padding-top: 35px;
+  margin-top: 20px;
 }
 #ring-page #legend {
   width: 33%;
