--- a/priv/admin/js/templates/all_unavailable_chart.hbs
+++ b/priv/admin/js/templates/all_unavailable_chart.hbs
@@ -1,4 +1,4 @@
 <div id="all-unavailable"></div>
 <span class="gui-text-flat italic">
   <strong>{{view.normalizedUnavailable}}%</strong>
-  of partitions have no primary replicas online.</span>
+  of partitions have all primary replicas offline.</span>
