--- a/priv/admin/js/templates/degenerate_preflist_chart.hbs
+++ b/priv/admin/js/templates/degenerate_preflist_chart.hbs
@@ -1,4 +1,4 @@
 <div id="degenerate"></div>
 <span class="gui-text-flat italic">
   <strong>{{view.normalizedDegenerate}}%</strong>
-  of partitions have replicas on the same node.</span>
+  of partitions have replicas that do not live on unique nodes.</span>
