--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -32,7 +32,7 @@
       <div class="partition orange"></div>
       <span class="legend-label gui-text">Majority fallbacks available.</span><br/>
       <div class="partition blue"></div>
-      <span class="legend-label gui-text">Degenerate preflist.</span><br/>
+      <span class="legend-label gui-text">Replicas do not live on unique nodes.</span><br/>
       <div class="partition green"></div>
       <span class="legend-label gui-text">Available.</span><br/>
     </section>
