--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -1972,22 +1972,30 @@ input.gui-point-button-right:active {
 #ring-page .chart {
   float: left;
   margin-bottom: 30px;
-  margin-top: 15px;
+  margin-top: 25px;
   width: 266px;
   vertical-align: top;
 }
+#ring-page .chart > div {
+  text-align: center;
+}
 #ring-page .chart span {
   font-family: 'titillium', helvetica, arial, sans-serif;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  background: rgba(0,0,0,0.25);
   display: inline-block;
   font-size: 15px;
-  padding-top: 12px;
+  padding: 15px;
   line-height: 1.3;
   vertical-align: top;
+  margin-top: 12px;
 }
 #ring-page .partition-section {
-  border-top: 1px solid rgba(255,255,255,0.18);
   padding-top: 35px;
-  margin-top: 20px;
 }
 #ring-page #legend {
   width: 33%;
