--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -82,9 +82,9 @@ CSS to be applied ONLY on the ring page
       vertical-align : top
 
   #partition-container
-    dimensions(63%, 176px)
+    dimensions(388px, auto)
     overflow : auto
-    margin   : 25px 0 25px 3%
+    margin   : 25px 0 25px 6%
     float    : left
     padding-right: 5px;
 
