--- a/priv/admin/js/templates/quorum_unavailable_chart.hbs
+++ b/priv/admin/js/templates/quorum_unavailable_chart.hbs
@@ -1,4 +1,8 @@
 <div id="quorum-unavailable"></div>
 <span class="gui-text-flat italic">
   <strong>{{view.normalizedUnavailable}}%</strong>
-  of partitions have a majority of primary replicas offline.</span>
+  of partitions have a majority of primary replicas offline.
+</span>
+<a class="gui-rect-button gui-text-bold">
+  <span class="gui-button-msg">DETAILS</span>
+</a>
