--- a/priv/admin/js/templates/degenerate_preflist_chart.hbs
+++ b/priv/admin/js/templates/degenerate_preflist_chart.hbs
@@ -1,4 +1,8 @@
 <div id="degenerate"></div>
 <span class="gui-text-flat italic">
   <strong>{{view.normalizedDegenerate}}%</strong>
-  of partitions have replicas that do not live on unique nodes.</span>
+  of partitions have replicas that do not live on unique nodes.
+</span>
+<a class="gui-rect-button gui-text-bold">
+  <span class="gui-button-msg">DETAILS</span>
+</a>
