Display context sensitive help for problems.

--- a/priv/admin/js/templates/degenerate_preflist_chart.hbs
+++ b/priv/admin/js/templates/degenerate_preflist_chart.hbs
@@ -3,6 +3,6 @@
   <strong>{{view.normalizedDegenerate}}%</strong>
   of partitions have replicas that do not live on unique nodes.
 </span>
-<a class="gui-rect-button gui-text-bold">
+<a {{action showDegeneratePreflists href=true}} class="gui-rect-button gui-text-bold">
   <span class="gui-button-msg">DETAILS</span>
 </a>
