--- a/priv/admin/js/templates/quorum_unavailable_chart.hbs
+++ b/priv/admin/js/templates/quorum_unavailable_chart.hbs
@@ -3,6 +3,6 @@
   <strong>{{view.normalizedUnavailable}}%</strong>
   of partitions have a majority of primary replicas offline.
 </span>
-<a class="gui-rect-button gui-text-bold">
+<a {{action showQuorumUnavailable href=true}} class="gui-rect-button gui-text-bold">
   <span class="gui-button-msg">DETAILS</span>
 </a>
