--- a/priv/admin/js/templates/all_unavailable_chart.hbs
+++ b/priv/admin/js/templates/all_unavailable_chart.hbs
@@ -1,8 +1,8 @@
 <div id="all-unavailable"></div>
 <span class="gui-text-flat italic">
   <strong>{{view.normalizedUnavailable}}%</strong>
-  of partitions have all primary replicas offline.
+  of partitions have all primary replicas on unreachable nodes.
 </span>
-<a class="gui-rect-button gui-text-bold">
+<a {{action showAllUnavailable href=true}} class="gui-rect-button gui-text-bold">
   <span class="gui-button-msg">DETAILS</span>
 </a>
