--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -80,9 +80,17 @@ CSS to be applied ONLY on the ring page
 
     .actions-pointer
       dimensions(72px, 13px)
-      absoluteLeft(87px, -21px)
       background : url('/admin/ui/images/pointer.png') center top no-repeat transparent
       margin-top : 8px
+
+    .actions-pointer-left
+      absoluteLeft(87px, -21px)
+
+    .actions-pointer-right
+      absoluteLeft(676px, -21px)
+
+    .actions-pointer-center
+      absoluteLeft(382px, -21px)
 
   .partition-section
     margin-top : 45px
