--- a/priv/admin/js/templates/all_unavailable_chart.hbs
+++ b/priv/admin/js/templates/all_unavailable_chart.hbs
@@ -1,7 +1,7 @@
 <div id="all-unavailable"></div>
 <span class="gui-text-flat italic">
   <strong>{{view.normalizedUnavailable}}%</strong>
-  of partitions have all primary replicas on unreachable nodes.
+  of partitions have all primary replicas on down or unreachable nodes.
 </span>
 <a {{action showAllUnavailable href=true}} class="gui-rect-button gui-text-bold">
   <span class="gui-button-msg">DETAILS</span>
