--- a/priv/admin/js/templates/degenerate_preflists.hbs
+++ b/priv/admin/js/templates/degenerate_preflists.hbs
@@ -1,11 +1,16 @@
 <section class="details">
-  <div class="actions-pointer"></div>
+  <div class="actions-pointer actions-pointer-left"></div>
   <h4 class="gui-headline-bold">
     Preference lists which do not contain replicas on distinct nodes.
   </h4>
-  {{controller.degenerateCount}} partitions have multiple replicas
+  {{#if degeneratesExist}}
+  {{degenerateCount}} partitions have multiple replicas
   located on the same node.  It is highly recommended that you <a
   href="http://docs.basho.com/riak/latest/cookbooks/Adding-and-Removing-Nodes/">add
   nodes</a> to resolve this and ensure the high availability and fault
-  tolerance of your data.
+tolerance of your data.
+  {{else}}
+  All partitions have replicas on distinct nodes.  There is nothing to
+  worry about.
+  {{/if}}
 </section>
