--- a/priv/admin/js/templates/quorum_unavailable.hbs
+++ b/priv/admin/js/templates/quorum_unavailable.hbs
@@ -1,10 +1,15 @@
 <section class="details">
-  <div class="actions-pointer"></div>
+  <div class="actions-pointer actions-pointer-center"></div>
   <h4 class="gui-headline-bold">
     Preference lists where a majority of primary repliacs are unavailable.
   </h4>
-  {{controller.quorumUnavailableCount}} partitions have a majority
+  {{#if quorumUnavailableExist}}
+  {{quorumUnavailableCount}} partitions have a majority
   of their replicas located on down or unreachable nodes.  It is
   recommended that you work to restore service to the unreachable nodes.
+  {{else}}
+  No partitions have a majority of their replicas located on down or
+  unreachable nodes. There is nothing to worry about.
+  {{/if}}
 </section>
 
