--- a/priv/admin/js/templates/degenerate_preflist_chart.hbs
+++ b/priv/admin/js/templates/degenerate_preflist_chart.hbs
@@ -1,7 +1,8 @@
 <div id="degenerate"></div>
 <span class="gui-text-flat italic">
   <strong>{{view.normalizedDegenerate}}%</strong>
-  of partitions have replicas that do not live on unique nodes.
+  of partitions have primary replicas that do not live on a unique set
+  of nodes.
 </span>
 <a {{action showDegeneratePreflists href=true}} class="gui-rect-button gui-text-bold">
   <span class="gui-button-msg">DETAILS</span>
